[package]
name = "merkle-tree-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "^0.10.8"
hex = "^0.4.3"
rstest = "^0.24.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "merkle_tree_build"
harness = false

[[bench]]
name = "merkle_tree_search"
harness = false
